fixed homepage on mobile

--- a/angular-frontend/src/styles.scss
+++ b/angular-frontend/src/styles.scss
@@ -51,7 +51,7 @@ hr.divider {
 
   .col:last-child {
       width: 100%;
-      height: calc(100% - 30px);
+      /*height: calc(100% - 30px);*/
       display: flex;
       flex-flow: column;
       justify-content: center;
